# pndmanager

./: .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: downloadworker.cpp  downloadworker.h  installdialog.cpp  installdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  package.cpp  package.h  packagedetails.cpp  packagedetails.h  packageitem.cpp  packageitem.h  packagemodel.cpp  packagemodel.h  packageview.cpp  packageview.h  syncworker.cpp  syncworker.h
